# wordcab-slack

./: .flake8  Dockerfile  README.md  bot-description.txt  docker-compose.yaml  nginx.conf  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  deploy-to-ec2.yml  qualit-coverage-deploy.yml  run-tests.yml
docker/: Dockerfile  nginx.conf
tests/: __init__.py  conftest.py  mocks.py  test_config.py  test_main.py  test_models.py  test_slack_bot.py
tests/utils/: __init__.py  test_add_context_to_summary.py  test_check_file_extension.py  test_delete_finished_jobs.py  test_extract_info.py  test_format_any_summary.py  test_format_brief_summary.py  test_format_files_to_upload.py  test_get_file_names.py  test_get_summarization_params.py  test_launch_job_tasks.py  test_summarization_task.py  test_url_summarization_task.py
wordcab_slack/: __init__.py  config.py  main.py  models.py  slack_bot.py  summarize.py  utils.py
