[tool.poetry]
name = "wordcab-slack"
version = "0.1.0"
description = "Slack bot that handles Summarization for you"
authors = ["Thomas Chaigneau <thomas@wordcab.com>"]
readme = "README.md"
packages = [{include = "wordcab_slack"}]

[tool.poetry.dependencies]
python = "3.10,<4.0"
slack-sdk = ">=3.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
