[tool.poetry]
name = "wordcab-slack"
version = "0.1.0"
description = "Slack bot that handles Summarization for you"
authors = ["Thomas Chaigneau <thomas@wordcab.com>"]
readme = "README.md"
packages = [{include = "wordcab_slack"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = ">=3.8.4"
fastapi = ">=0.92.0"
python-dotenv = ">=1.0.0"
slack-bolt = ">=1.16.2"
slackeventsapi = ">=3.0.1"
uvicorn = ">=0.20.0"
wordcab = ">=0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
