[tool.poetry]
name = "wordcab-slack"
version = "0.1.0"
description = "Slack bot that handles Summarization for you"
authors = ["Thomas Chaigneau <thomas@wordcab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = ">=3.8.4"
fastapi = ">=0.92.0"
loguru = ">=0.6.0"
python-dotenv = ">=1.0.0"
slack-bolt = ">=1.16.3"
slackeventsapi = ">=3.0.1"
uvicorn = ">=0.20.0"
wordcab = ">=0.5.4"


[tool.poetry.group.test.dependencies]
black = ">=23.1.0"
coverage = {extras = ["toml"], version = ">=7.2.1"}
darglint = ">=1.8.1"
flake8 = ">=6.0.0"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=23.2.13"
flake8-docstrings = ">=1.7.0"
httpx = ">=0.23.3"
isort = ">=5.12.0"
pre-commit = ">=3.1.1"
pre-commit-hooks = ">=4.4.0"
pytest = ">=7.2.2"
pytest-asyncio = ">=0.20.3"
pytest-mock = ">=3.10.0"
pyupgrade = ">=3.3.1"

[tool.isort]
profile = "black"
force_single_line = false
lines_after_imports = 2

[tool.coverage.run]
branch = true
source = ["wordcab_slack", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
